# IgPhyML

./: .cproject  .project  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  configure.ac  make_phyml  make_phyml_blas  make_phyml_blas_omp  make_phyml_omp  version
examples/: CH103.20.fa  CH103.20.phy  part.20.txt
src/: Makefile.am  alrt.c  alrt.h  bionj.c  bionj.h  cl.c  cl.h  controller.c  controller.h  ecm.h  eigen.c  eigen.h  free.c  free.h  help.c  help.h  hmode  lk.c  lk.h  main.c  models.c  models.h  nucle2codon.c  nucle2codon.h  optimiz.c  optimiz.h  pars.c  pars.h  simu.c  simu.h  spr.c  spr.h  stats.c  stats.h  utilities.c  utilities.h
src/.deps/: alrt.Po  bionj.Po  cl.Po  controller.Po  eigen.Po  free.Po  help.Po  lk.Po  main.Po  models.Po  nucle2codon.Po  optimiz.Po  pars.Po  simu.Po  spr.Po  stats.Po  utilities.Po
src/motifs/: HTABLE_GRS_0_ref.csv  HTABLE_GYW_0_ref.csv  HTABLE_SYC_2_ref.csv  HTABLE_TW_0_ref.csv  HTABLE_WA_1_ref.csv  HTABLE_WRC_2_ref.csv
